--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -19,6 +19,8 @@
             <a class="dropdown-item" href="/links">All Links</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/links/add">Add A Link</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/products/1">Listado</a>
           </div>
         </li>
         <li class="nav-item">
