--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -20,7 +20,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/links/add">Add A Link</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/products/1">Listado</a>
+            <a class="dropdown-item" href="/links/products/1">Listado</a>
           </div>
         </li>
         <li class="nav-item">
