--- a/src/views/links/listado.hbs
+++ b/src/views/links/listado.hbs
@@ -1,3 +1,22 @@
-<div class="container p-4">
-    <h3>hola</h3>
+<div class="container">
+  <div class="row p-5">
+
+    <!-- ITEMS -->
+    {{#each links}}
+      <div class="col-md-4">
+        <div class="p-4">
+          <div class="card">
+            <img src="<%= products[i].cover %>" class="card-img-top">
+            <div class="card-body">
+              <h3 class="card-title"><%= products[i].name %></h3>
+              <p class="card-text"><%= products[i].category %></p>
+              <p class="card-text"><%= products[i].price %></p>
+            </div>
+          </div>
+        </div>
+      </div>
+     {{/each}}
+  </div>
+
+  
 </div>
