--- a/src/views/links/listado.hbs
+++ b/src/views/links/listado.hbs
@@ -8,9 +8,9 @@
           <div class="card">
             <img src="<%= products[i].cover %>" class="card-img-top">
             <div class="card-body">
-              <h3 class="card-title"><%= products[i].name %></h3>
-              <p class="card-text"><%= products[i].category %></p>
-              <p class="card-text"><%= products[i].price %></p>
+              <h3 class="card-title">{{title}}</h3>
+              <p class="card-text">{{url}}</p>
+              <p class="card-text">{{description}}</p>
             </div>
           </div>
         </div>
