--- a/src/views/links/listado.hbs
+++ b/src/views/links/listado.hbs
@@ -6,7 +6,7 @@
       <div class="col-md-4">
         <div class="p-4">
           <div class="card">
-            <img src="<%= products[i].cover %>" class="card-img-top">
+            <img src="" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">{{title}}</h3>
               <p class="card-text">{{url}}</p>
