--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,9 @@
 <main class="index">
     <header class="masthead d-flex">
         <div class="container text-center my-auto">
-            <h1 class="mb-1">SIGESOP</h1>
+            <h1 class="mb-1">SIA</h1>
             <h3 class="mb-5">
-                <em>Sistema de Gestión de Soporte Técnico</em>
+                <em>Sistema Integrado Administrativo</em>
             </h3>
             <a class="btn btn-primary btn-lg" href="/signin">
                 Iniciar Sesión
