--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -25,7 +25,7 @@ font-family: 'Oswald', sans-serif;
     height: 100%;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    background: url('/img/background4.jpeg');
+    background: url('/img/background.jpeg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
