--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -24,7 +24,7 @@
 
                         <div class="form-group">
                            <button class="btn btn-success btn-block">
-                               Registro
+                               Registrar
                            </button>
 
                         </div>
