--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SIGESOP</title>
+    <title>SIA</title>
     {{!--GOOGLE FONTS--}}
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     {{!--BOOTSTRAP 4--}}
