--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <i class="fas fa-link"></i> SIGESOP
+      <i class="fas fa-link"></i> SIA
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -29,13 +29,14 @@
         <li class="nav-item">
           <a class="nav-link" href="/logout">Salir</a>
         </li>
-        {{else}}
+       {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/signin">SignIn</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/signup">SignUp</a>
         </li>
+       
         {{/if}}
       </ul>
     </div>
