--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,63 @@
-<h1>INDEX</h1>
-<h2><%=nombre%></h2>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+    <div class='container'>
+        <a href="/create" class="btn btn-info mt-4">Add</a>
+        <table class="table table-bordered table-striped text-center mt-4">
+            <thead>
+              <tr class='bg-primary text-white'>
+                <th scope="col">#</th>
+                <th scope="col">Email</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Rol</th>
+                <th scope="col">-</th>
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+
+                <% results.forEach ((user)=>{ %>
+
+                    <% if(user.user_type==0) 
+                        rol="Administrador"
+                        else if(user.user_type==1)
+                        rol="Ministro"
+                        else if(user.user_type==2)
+                        rol="Gerente"
+                    %>
+
+                    
+
+                    <tr>
+                        <th><%=user.user_id  %></th>
+                        <td><%=user.user_email  %></td>
+                        <td><%=user.user_name  %></td>
+                        <td><%=user.user_lastname  %></td>
+                        <td><%=rol  %></td>
+                        <td>
+                            <a href="/edit" class="btn btn-primary">Editar</a>
+                            <a href="/borrar" class="btn btn-danger">Borrar</a>
+                        </td>
+                      </tr>
+
+                <%  }) %>
+            
+            </tbody>
+        </table>
+    </div>
+
+    
+
+
+  </body>
+</html>
