--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <div class='container'>
-        <a href="/create" class="btn btn-info mt-4">Add</a>
+        <button type="button" class="btn btn-primary mt-4" data-bs-toggle="modal" data-bs-target="#modalUsuario" data-bs-whatever="@mdo">Nuevo</button>
         <table class="table table-bordered table-striped text-center mt-4">
             <thead>
               <tr class='bg-primary text-white'>
@@ -45,7 +45,7 @@
                         <td><%=user.user_lastname  %></td>
                         <td><%=rol  %></td>
                         <td>
-                            <a href="/edit" class="btn btn-primary">Editar</a>
+                            <button class="btn btn-primary btnEditar" type="submit">Editar</button>
                             <a href="/borrar" class="btn btn-danger">Borrar</a>
                         </td>
                       </tr>
@@ -57,7 +57,37 @@
     </div>
 
     
-
+    <script src="js/funciones.js"></script>
 
   </body>
 </html>
+
+<div class="modal fade" id="modalUsuario" tabindex="-1" aria-labelledby="modalUsuario" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalUsuario">New message</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form>
+        <div class="modal-body">
+         <input type="text" name="id_editar" id="id_editar" hidden>
+            <div class="mb-3">
+              <label for="recipient-name" class="col-form-label">Nombre:</label>
+              <input type="text" class="form-control" name="user_name" id="user_name">
+            </div>
+            <div class="mb-3">
+              <label for="message-text" class="col-form-label">Apellido:</label>
+              <input type="text" class="form-control" name="user_lastname" id="user_lastname">
+            </div>
+         
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Send message</button>
+        </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
