--- a/views/home.ejs
+++ b/views/home.ejs
@@ -188,7 +188,7 @@
           <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block"><%= user_name%><!--Alexander Pierce--></a>
         </div>
       </div>
 
@@ -937,7 +937,7 @@
         <!-- Main row -->
         <div class="row">
           <!-- Left col -->
-          <section class="col-lg-7 connectedSortable">
+          <section class="col-lg-6 connectedSortable">
             <div class="card">
               <div class="card-header border-0">
                 <h3 class="card-title">Visitantes por primera vez</h3>
@@ -954,17 +954,63 @@
                 <table class="table table-striped table-valign-middle">
                   <thead>
                   <tr>
-                    <th>Nombre</th>
-                    <th>Email</th>
+                    <th>Nº</th>
+                    <th>Nombre y Apellido</th>
+                    <th>Telefono</th>
+                    <th>Sexo</th>
                     
                   </tr>
                   </thead>
                   <tbody>
+                    <% cont=1 %>
                   <% rows.forEach ((user) =>{ %>  
                   <tr>
                     
-                    <td><%= user.user_name %> <%= user.user_lastname %></td>
-                    <td><%= user.user_email %></td>
+                    <td><%= cont %></td>
+                    <td><%= user.miembro_nombres %> <%= user.user_miembro_apellidos %></td>
+                    <td><%= user.miembro_telefono %></td>
+                    <td><%= ((user.miembro_sexo==0)?'F':'M') %></td>
+                    
+                  </tr>
+                  <% cont++ }) %>
+                  
+                  
+                  
+                  </tbody>
+                </table>
+              </div>
+            </div>
+           
+          </section>
+
+          <section class="col-lg-6 connectedSortable">
+            <div class="card">
+              <div class="card-header border-0">
+                <h3 class="card-title">Seguimiento</h3>
+                <div class="card-tools">
+                  <!--<a href="#" class="btn btn-tool btn-sm">
+                    <i class="fas fa-download"></i>
+                  </a>
+                  <a href="#" class="btn btn-tool btn-sm">
+                    <i class="fas fa-bars"></i>
+                  </a>-->
+                </div>
+              </div>
+              <div class="card-body table-responsive p-0">
+                <table class="table table-striped table-valign-middle">
+                  <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>Teléfono</th>
+                    
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <% seguimiento.forEach ((user) =>{ %>  
+                  <tr>
+                    
+                    <td><%= user.miembro_nombres %>  <%= user.miembro_apellidos %></td>
+                    <td><%= user.miembro_telefono %></td>
                     
                   </tr>
                   <% }) %>
@@ -977,7 +1023,7 @@
             </div>
            
           </section>
-          <!-- /.Left col -->
+
          
           
         </div>
