--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
    <b>SISCOI</b>
   </div>
   <!-- /.login-logo -->
-  <div class="card">
+  <div class="card" style="margin-top:-30px">
     <div class="card-body login-card-body shadow-lg">
       <p class="login-box-msg">Iniciar sesion</p>
 
