--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -22,7 +22,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="far fa-user"></i></span>
                 </div>
-                <input type="text" class="form-control" name="user_name" id="user_name">
+                <input type="text" class="form-control" name="user_name" id="user_name" value=<%= mostrarDatos==true ? username:2 %> >
               </div>
             </div>
 
@@ -58,7 +58,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-key"></i></span>
                 </div>
-                <input type="text" class="form-control" name="user_pwd" id="user_pwd">
+                <input type="password" class="form-control" name="user_pwd" id="user_pwd">
               </div>
 
             </div>
@@ -85,8 +85,8 @@
 
       </div>
       <div class="modal-footer justify-content-between">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
       </div>
     </form>  
     </div>
@@ -125,6 +125,10 @@ $.widget.bridge('uibutton', $.ui.button)
 </script>
 <!-- Bootstrap 4 -->
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- jquery-validation -->
+<script src="plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="plugins/jquery-validation/additional-methods.min.js"></script>
+
 <!-- ChartJS -->
 <script src="plugins/chart.js/Chart.min.js"></script>
 <!-- Sparkline -->
@@ -206,7 +210,62 @@ $.widget.bridge('uibutton', $.ui.button)
 
 
 
+
+    $.validator.setDefaults({
+    submitHandler: function () {
+      document.getElementById("form_usuarios").submit();
+    }
   });
+  $('#form_usuarios').validate({
+    rules: {
+      user_name: {
+        required: true,
+        minlength: 2
+      },
+      user_email: {
+        required: true,
+        email: true
+      },
+      user_pwd: {
+        required: true
+      },
+      user_type: {
+        required: true
+      },
+    },
+    messages: {
+      user_email: {
+        required: "Ingrese un email",
+        email: "Ingrese un email válido"
+      },
+     user_name: {
+        required: "Ingrese un Nombre",
+        minlength: "Ingrese al menos 2 carácteres"
+      },
+      user_pwd:{
+        required: "Ingrese un password",
+      } ,
+      user_type:{
+        required: "Seleccione un Rol",
+      } 
+    },
+    errorElement: 'span',
+    errorPlacement: function (error, element) {
+      error.addClass('invalid-feedback');
+      element.closest('.form-group').append(error);
+    },
+    highlight: function (element, errorClass, validClass) {
+      $(element).addClass('is-invalid');
+    },
+    unhighlight: function (element, errorClass, validClass) {
+      $(element).removeClass('is-invalid');
+    }
+  });
+
+  
+  
+
+  });//FIN FUNCION
 
   
 
@@ -214,20 +273,63 @@ $.widget.bridge('uibutton', $.ui.button)
 
 <% if(alert) { %>
   <script>
+
 $('#btnUsuario').trigger('click');
 var Toast = Swal.mixin({
   toast: true,
   position: 'top-end',
   showConfirmButton: false,
-  timer: 3000
+  timer: 4000
 });
 
-toastr.error('Email existe') 
 
 
+
+
+setTimeout(function(){
+  /*Toast.fire({
+    icon: 'error',
+    title: '<%= alertMessage %>'
+  })*/
+  toastr.error('<%= alertMessage %>') 
+}, 1000);
 
   </script>
 <% } %>  
+
+<script>
+  function deleteUser(user_id){
+   
+
+    Swal.fire({
+    title: '¿Realmente desea eliminar este usuario?',
+    text: "Se perderán todos los datos!",
+    icon: 'warning',
+    showCancelButton: true,
+    confirmButtonColor: '#3085d6',
+    cancelButtonColor: '#d33',
+    confirmButtonText: 'Eliminar',
+    cancelButtonText: 'Cancelar'
+  }).then((result) => {
+    if (result.isConfirmed) {
+      window.location="/deleteuser/"+user_id;
+
+      setTimeout(function(){
+        toastr.success('Usuario eliminado!') 
+      }, 3000);
+
+    }
+  })
+
+
+  }
+
+  function limpiarModalUser(){
+      document.getElementById("form_usuarios").reset();
+  }
+
+ 
+</script>
 
 </body>
 </html>
