--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -14,7 +14,7 @@
               <div class="card">
                 <div class="card-header">
                   <h3 class="card-title">Usuarios</h3>
-                  <button id="btnUsuario" style="float:right" type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-default">
+                  <button  id="btnUsuario" style="float:right" type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-default">
                     Nuevo
                     <i class="fa fa-user-plus"></i></button>
                 </div>
@@ -37,7 +37,7 @@
                       <td>
                         <button type="button" class="btn btn-outline-primary btn-block"><i class="fa fa-edit"></i></button>
 
-                        <button type="button" class="btn btn-outline-danger btn-block"><i class="fa fa-trash"></i></button>
+                        <button onclick="deleteUser(<%= item.user_id %>)" type="button" class="btn btn-outline-danger btn-block"><i class="fa fa-trash"></i></button>
                       </td>
                     </tr>
                     <% }) %>
