--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
+    <a href="/home" class="brand-link">
       <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">SISCOI</span>
     </a>
@@ -66,7 +66,7 @@
           </li> -->
 
           <li class="nav-item"> <!-- DASHBOARD -->
-            <a href="/home" class="nav-link active">
+            <a href="/home" class='nav-link <%= menuactivo=="home" ? "active":"" %>'>
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
                 Dashboard
@@ -74,8 +74,9 @@
               </p>
             </a>
           </li>
+          <% if(user_type==1) { %>
           <li class="nav-item">
-            <a href="/usuarios" class="nav-link">
+            <a href="/usuarios" class='nav-link <%= menuactivo=="usuario" ? "active":"" %>'>
               <i class="nav-icon fas fa-users"></i>
               <p>
                 Usuarios
@@ -83,6 +84,18 @@
               </p>
             </a>
           </li>
+          <% } %>
+
+          <li class="nav-header">SALIDA DEL SISTEMA</li>
+          <li class="nav-item">
+            <a href="/logout" class="nav-link">
+              <i class="nav-icon fa fa-sign-out"></i>
+                Salir
+                <!-- <span class="right badge badge-danger">New</span> -->
+              </p>
+            </a>
+          </li>
+
           <li class="nav-item">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-copy"></i>
