--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,4 +1,4 @@
-
+<% if(menuactivo=="usuario") { %>
 <div class="modal fade" id="modal-default">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -103,6 +103,139 @@
   </div>
   <!-- /.modal-dialog -->
 </div>
+<% } %>
+
+<% if(menuactivo=="miembros") { %>
+<div class="modal fade" id="modal-miembros">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form name="form_miembros" id="form_miembros" action="/savemiembro" method="post">
+      <div class="modal-header">
+        <h4 class="modal-title">Gestión de Miembros</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        
+        <div class="card card-danger">
+          
+          <div class="card-body">
+            
+            <!-- Nombre -->
+            <div class="form-group">
+              <label>Nombre:</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="far fa-user"></i></span>
+                </div>
+                <input type="text" class="form-control" name="miembro_nombres" id="miembro_nombres" value=<%= mostrarDatos==true ? nombre:'' %> >
+              </div>
+            </div>
+
+
+             <!-- Apellido -->
+             <div class="form-group">
+              <label>Apellido:</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="far fa-user"></i></span>
+                </div>
+                <input type="text" class="form-control" name="miembro_apellidos" id="miembro_apellidos" value=<%= mostrarDatos==true ? apellido:'' %>>
+              </div>
+
+            </div>
+
+            <div class="form-group">
+              <label>Sexo:</label>
+              
+              <select class="form-control" style="width: 100%;" name="miembro_sexo" id="miembro_sexo">
+                <option value="0">Masculino</option>
+                <option value="1">Femenino</option>
+               
+              </select>
+            </div>
+
+             <!-- Cédula -->
+             <div class="form-group">
+              <label>Cédula:</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fa fa-address-card"></i></span>
+                </div>
+                <input type="text" class="form-control" name="miembro_cedula" id="miembro_cedula" value=<%= mostrarDatos==true ? cedula:'' %>>
+              </div>
+
+            </div>
+
+            <!-- Telefono -->
+            <div id="" class="form-group">
+              <label>Teléfono:</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-phone"></i></span>
+                </div>
+                <input type="text" class="form-control" data-inputmask='"mask": "(9999)999-99-99"' data-mask name="miembro_telefono" id="miembro_telefono" value=<%= mostrarDatos==true ? telefono:'' %> >
+              </div>
+
+            </div>
+
+            <div id="" class="form-group">
+              <label>Fecha Nacimiento:</label>
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-calendar"></i></span>
+                </div>
+                <input type="text" class="form-control" data-inputmask-alias="datetime" data-inputmask-inputformat="dd/mm/yyyy" data-mask name="miembro_nacimiento" id="miembro_nacimiento" value=<%= mostrarDatos==true ? nacimiento:'' %> >
+              </div>
+
+            </div>
+           
+
+            <div class="form-group">
+              <label>Cómo nos conoció:</label>
+              <select class="form-control" style="width: 100%;" name="miembro_nos_conocio" id="miembro_nos_conocio">
+                <option value="-1">Seleccione</option>
+                <option value="0">Redes Sociales</option>
+                <option value="1">Invitación</option>
+                <option value="2">Otros</option>
+               
+                
+              </select>
+            </div>
+
+            <div class="form-group">
+             
+              <div class="input-group">
+                
+                <input type="text" class="form-control" id="miembro_id" name="miembro_id">
+              </div>
+
+            </div>
+
+            
+            
+          </div>
+          <!-- /.card-body -->
+        </div>
+
+
+      </div>
+      <div class="modal-footer justify-content-between">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+      </div>
+    </form>  
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<% } %>
+
+
+
+
 
 
 
@@ -193,10 +326,13 @@ $.widget.bridge('uibutton', $.ui.button)
 
 <script>
   $(function () {
+    
     $("#example1").DataTable({
       "responsive": true, "lengthChange": false, "autoWidth": false,
       "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
     }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+    
+    
     $('#example2').DataTable({
       "paging": true,
       "lengthChange": false,
@@ -205,6 +341,16 @@ $.widget.bridge('uibutton', $.ui.button)
       "info": true,
       "autoWidth": false,
       "responsive": true,
+    });
+
+    $('#tablamiembros').DataTable({
+      "paging": true,
+      "lengthChange": true,
+      "searching": true,
+      "ordering": true,
+      "info": true,
+      "autoWidth": true,
+      "responsive": false,
     });
 
 
@@ -271,6 +417,66 @@ $.widget.bridge('uibutton', $.ui.button)
     }
   });
 
+
+  $.validator.setDefaults({
+    submitHandler: function () {
+      document.getElementById("form_miembros").submit();
+    }
+  });
+  $('#form_miembros').validate({
+    rules: {
+      miembro_nombres: {
+        required: true,
+        minlength: 2
+      },
+      miembro_apellidos: {
+        required: true,
+        minlength: 2
+      },
+     miembro_telefono: {
+        required: true
+      },
+      miembro_nacimiento: {
+        required: true
+      },
+
+      miembro_cedula: {
+        required: true
+      },
+    },
+    messages: {
+      miembro_nombres: {
+        required: "Ingrese un Nombre",
+        minlength: "Ingrese al menos 2 carácteres"
+      },
+     miembro_apellidos: {
+        required: "Ingrese un Apellido",
+        minlength: "Ingrese al menos 2 carácteres"
+      },
+      miembro_telefono:{
+        required: "Ingrese un Teléfono",
+      } ,
+      miembro_cedula:{
+        required: "Ingrese una cedula",
+      }, 
+
+      miembro_nacimiento:{
+        required: "Ingrese una fecha de nacimiento",
+      } 
+    },
+    errorElement: 'span',
+    errorPlacement: function (error, element) {
+      error.addClass('invalid-feedback');
+      element.closest('.form-group').append(error);
+    },
+    highlight: function (element, errorClass, validClass) {
+      $(element).addClass('is-invalid');
+    },
+    unhighlight: function (element, errorClass, validClass) {
+      $(element).removeClass('is-invalid');
+    }
+  });
+
   
   
 
@@ -301,6 +507,29 @@ var Toast = Swal.mixin({
 
 
 
+setTimeout(function(){
+  /*Toast.fire({
+    icon: 'error',
+    title: '<%= alertMessage %>'
+  })*/
+  toastr.error('<%= alertMessage %>') 
+}, 1000);
+
+  </script>
+<% } %>  
+
+
+<% if(alert_miembro) { %>
+  <script>
+alert('modal');
+$('#btnMiembro').trigger('click');
+var Toast = Swal.mixin({
+  toast: true,
+  position: 'top-end',
+  showConfirmButton: false,
+  timer: 4000
+});
+
 
 
 setTimeout(function(){
@@ -313,6 +542,7 @@ setTimeout(function(){
 
   </script>
 <% } %>  
+
 
 <script>
   function deleteUser(user_id){
@@ -345,6 +575,7 @@ setTimeout(function(){
       document.getElementById("form_usuarios").reset();
   }
 
+  //LLAMADA A MODALES PARA EDITAR USUARIO
   function modalUsuario(user_id){
 
 //alert(user_id);
@@ -361,10 +592,37 @@ $("#contenedorPass").hide();
 $('#modal-default').modal('show')
   }
 
+//MODAL EDITAR MIEMBRO
+  function modalMiembro(miembro_id){
+
+//alert(user_id);
+$('#miembro_nombres').val($('#name_html_'+miembro_id).val())
+$('#miembro_apellidos').val($('#apellido_html_'+miembro_id).val())
+$('#miembro_id').val($('#id_html_'+miembro_id).val())
+$('#miembro_sexo').val($('#sexo_html_'+miembro_id).val())
+$('#miembro_telefono').val($('#telefono_html_'+miembro_id).val())
+$('#miembro_cedula').val($('#cedula_html_'+miembro_id).val())
+$('select option[value="'+$('#nos_conocio_html_'+miembro_id).val()+'"]').attr("selected", true);
+
+$("#form_miembros").attr("action", '/editarmiembro')
+
+
+$('#modal-miembros').modal('show')
+  }
+
+
+  //LIMPIAR MODALES
   $('.btnNewUser').on('click', function (e) {
 
 	  document.getElementById("form_usuarios").reset(); 
 	  $('#modal-default').modal('show')
+	})
+
+
+  $('.btnNewMiembro').on('click', function (e) {
+
+	  document.getElementById("form_miembros").reset(); 
+	  $('#modal-miembros').modal('show')
 	})
 
  
