--- a/views/template/sidebar.ejs
+++ b/views/template/sidebar.ejs
@@ -86,6 +86,18 @@
           </li>
           <% } %>
 
+          <% if(user_type!=3) { %>
+            <li class="nav-item">
+              <a href="/miembros" class='nav-link <%= menuactivo=="miembros" ? "active":"" %>'>
+                <i class="nav-icon fas fa-users"></i>
+                <p>
+                  Miembros
+                  <!-- <span class="right badge badge-danger">New</span> -->
+                </p>
+              </a>
+            </li>
+            <% } %>
+
           <li class="nav-header">SALIDA DEL SISTEMA</li>
           <li class="nav-item">
             <a href="/logout" class="nav-link">
