--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -14,7 +14,7 @@
               <div class="card">
                 <div class="card-header">
                   <h3 class="card-title">Usuarios</h3>
-                  <button  id="btnUsuario" style="float:right" type="button" class="btn btn-primary btn-sm btnNewUser" data-toggle="modal" data-target="#modal-defaultd">
+                  <button  id="btnUsuario" style="float:right" type="button" class="btn btn-primary btn-sm btnNewUser" data-toggle="modal" data-target="#modal-default">
                     Nuevo
                     <i class="fa fa-user-plus"></i></button>
                 </div>
