--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -208,7 +208,7 @@
              
               <div class="input-group">
                 
-                <input type="text" class="form-control" id="miembro_id" name="miembro_id">
+                <input type="hidden" class="form-control" id="miembro_id" name="miembro_id">
               </div>
 
             </div>
@@ -323,6 +323,8 @@ $.widget.bridge('uibutton', $.ui.button)
 
 <!-- Select2 -->
 <script src="plugins/select2/js/select2.full.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
 
 <script>
   $(function () {
@@ -521,7 +523,7 @@ setTimeout(function(){
 
 <% if(alert_miembro) { %>
   <script>
-alert('modal');
+//alert('modal');
 $('#btnMiembro').trigger('click');
 var Toast = Swal.mixin({
   toast: true,
@@ -602,6 +604,10 @@ $('#miembro_id').val($('#id_html_'+miembro_id).val())
 $('#miembro_sexo').val($('#sexo_html_'+miembro_id).val())
 $('#miembro_telefono').val($('#telefono_html_'+miembro_id).val())
 $('#miembro_cedula').val($('#cedula_html_'+miembro_id).val())
+
+//var fechaformat=moment($('#nacimiento_html_'+miembro_id).val(),"YYYY-MM-DD").format('DD-MM-YYYY')
+
+$('#miembro_nacimiento').val($('#nacimiento_html_'+miembro_id).val())
 $('select option[value="'+$('#nos_conocio_html_'+miembro_id).val()+'"]').attr("selected", true);
 
 $("#form_miembros").attr("action", '/editarmiembro')
