--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,49 +12,42 @@
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>150</h3>
+                <% nuevos=0 %>
+                  <% rows.forEach ((user) =>{ %>  
+                    <% if(user.ca_primera_vez==1) { %>
+                      <% nuevos++ %>
+                    <% } %>    
+                    <%  }) %>  
+                <h3> <%= nuevos %> </h3>
 
-                <p>New Orders</p>
+                <p>Visitantes</p>
               </div>
               <div class="icon">
                 <i class="ion ion-bag"></i>
               </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="#" class="small-box-footer">Más Información <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
-            <div class="small-box bg-success">
-              <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
-
-                <p>Bounce Rate</p>
-              </div>
-              <div class="icon">
-                <i class="ion ion-stats-bars"></i>
-              </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-            </div>
-          </div>
+          
           <!-- ./col -->
           <div class="col-lg-3 col-6">
             <!-- small box -->
             <div class="small-box bg-warning">
               <div class="inner">
-                <h3>44</h3>
+                <h3><%= rows.length %></h3>
 
-                <p>User Registrations</p>
+                <p>Personas Registradas</p>
               </div>
               <div class="icon">
                 <i class="ion ion-person-add"></i>
               </div>
-              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+              <a href="#" class="small-box-footer">Más Información <i class="fas fa-arrow-circle-right"></i></a>
             </div>
           </div>
           <!-- ./col -->
-          <div class="col-lg-3 col-6">
-            <!-- small box -->
+          <!--<div class="col-lg-3 col-6">
+   
             <div class="small-box bg-danger">
               <div class="inner">
                 <h3>65</h3>
@@ -66,8 +59,8 @@
               </div>
               <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
-          </div>
-          <!-- ./col -->
+          </div>-->
+   
         </div>
         <!-- /.row -->
         <!-- Main row -->
@@ -100,14 +93,16 @@
                   <tbody>
                     <% cont=1 %>
                   <% rows.forEach ((user) =>{ %>  
+                    <% if(user.ca_primera_vez==1) { %>
                   <tr>
                     
                     <td><%= cont %></td>
-                    <td><%= user.miembro_nombres %> <%= user.user_miembro_apellidos %></td>
+                    <td><%= user.miembro_nombres %> <%= user.miembro_apellidos %></td>
                     <td><%= user.miembro_telefono %></td>
-                    <td><%= ((user.miembro_sexo==0)?'F':'M') %></td>
+                    <td><%= ((user.miembro_sexo==0)?'M':'F') %></td>
                     
                   </tr>
+                   <% } %>
                   <% cont++ }) %>
                   
                   
