--- a/views/registroasistencia.ejs
+++ b/views/registroasistencia.ejs
@@ -46,16 +46,25 @@
                       <input type="hidden" id='nos_conocio_html_<%= item.miembro_id %>' value='<%= item.miembro_nos_conocio %>' >
                       <input type="hidden" id='cedula_html_<%= item.miembro_id %>' value='<%=item.miembro_cedula %>' >
                       <input type="hidden" id='nacimiento_html_<%= item.miembro_id %>' value='<%=item.fecha_nac %>' >
-                      
+
+                      <input type="hidden" id='user_id_html_<%= item.miembro_id %>' value=<%= user_id %> >
+
+                     
 
                       </td>
                      
                       <td class="d-none d-sm-none d-md-table-cell"><%= item.miembro_sexo==0 ? 'M':'F' %></td>
                       <td><%= item.miembro_telefono %></td>
                       <td>
-                        <button onclick="modalMiembro(<%= item.miembro_id %>)" data-id='<%=item.miembro_id %>' type="button" class="btn btn-sm btn-outline-primary btn-block btnEditarMiembro"><i class="fa fa-edit"></i></button>
 
-                        <button onclick="deleteMiembro(<%= item.miembro_id %>)" type="button" class="btn btn-sm btn-outline-danger btn-block"><i class="fa fa-trash"></i></button>
+                       
+
+                        <!--<button onclick="deleteMiembro(<%= item.miembro_id %>)" type="button" class="btn btn-sm btn-outline-success btn-block"><i class="fa fa-check-circle"></i></button>-->
+                         <% if(item.ca_id>0) { %> 
+                        <span class="badge badge-success">Registrado</span>
+                        <% }else{ %>
+                          <button onclick="modalMiembroRegistro(<%= item.miembro_id %>)" data-id='<%=item.miembro_id %>' type="button" class="btn btn-sm btn-outline-primary btn-block btnEditarMiembro"><i class="fa fa-check-square"></i></button>
+                          <% } %>    
                       </td>
                     </tr>
                     <% }) %>
