--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -34,6 +34,10 @@
   <!-- Toastr -->
   <link rel="stylesheet" href="plugins/toastr/toastr.min.css">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+
+  <link rel="stylesheet" href="css/personalizar.css">
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 
